// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zshy with different tsconfig configurations > should not edit package.json when noEdit is true 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/no-edit-package-json
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     },
     "noEdit": true
   }
»  Reading tsconfig from ./tsconfig.basic.json
»  Determining entrypoints...
   ╔══════════╤════════════════╗
   ║ Subpath  │ Entrypoint     ║
   ╟──────────┼────────────────╢
   ║ "my-pkg" │ ./src/index.ts ║
   ╚══════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  Cleaning up outDir...
»  Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "outDir": "<root>/test/no-edit-package-json/dist",
     "rootDir": "<root>/test/no-edit-package-json/src",
     "emitDeclarationOnly": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Building ESM...
»  Writing files (8 total)...
     ./dist/index.cjs
     ./dist/index.cjs.map
     ./dist/index.d.cts
     ./dist/index.d.cts.map
     ./dist/index.d.ts
     ./dist/index.d.ts.map
     ./dist/index.js
     ./dist/index.js.map
»  [noedit] Skipping modification of package.json
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should skip CJS build when commonjs is false 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/esm-only
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     },
     "cjs": false
   }
»  Reading tsconfig from ./tsconfig.basic.json
»  Determining entrypoints...
   ╔══════════╤════════════════╗
   ║ Subpath  │ Entrypoint     ║
   ╟──────────┼────────────────╢
   ║ "my-pkg" │ ./src/index.ts ║
   ╚══════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "outDir": "<root>/test/esm-only/dist",
     "rootDir": "<root>/test/esm-only/src",
     "emitDeclarationOnly": false,
     "composite": false
   }
»  Skipping CJS build (cjs: false)
»  Building ESM...
»  [dryrun] Writing files (4 total)...
     ./dist/index.d.ts
     ./dist/index.d.ts.map
     ./dist/index.js
     ./dist/index.js.map
»  [dryrun] Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.ts"
»  Setting "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
   }
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should support \${configDir} variable substitution in extended tsconfig 1`] = `
{
  "exitCode": 1,
  "stderr": "»  Found 3 error(s) and 0 warning(s)
»  Build completed with errors",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/tsconfig-paths
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     }
   }
»  Reading tsconfig from ./tsconfig.configdir.json
»  Determining entrypoints...
   ╔═══════════════════════╤════════════════╗
   ║ Subpath               │ Entrypoint     ║
   ╟───────────────────────┼────────────────╢
   ║ "test-tsconfig-paths" │ ./src/index.ts ║
   ╚═══════════════════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./../dist     ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts"
   ]
»  Resolved compilerOptions: {
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "outDir": "<root>/test/dist",
     "baseUrl": "<root>/test/src",
     "paths": {
       "@utils/*": [
         "utils/*"
       ],
       "@components/*": [
         "components/*"
       ],
       "@/config": [
         "config.ts"
       ],
       "utils/*": [
         "utils/*"
       ],
       "components/*": [
         "components/*"
       ],
       "lib/*": [
         "lib/*"
       ],
       "~/*": [
         "*"
       ],
       "$config": [
         "config.ts"
       ],
       "#helpers": [
         "utils/helpers.ts"
       ],
       "@shared/*": [
         "<root>/test/src/utils/*"
       ],
       "~shared/*": [
         "<root>/test/src/components/*"
       ]
     },
     "pathsBasePath": "<root>/test/tsconfig-paths",
     "noEmit": false,
     "emitDeclarationOnly": false,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
[<time>rc/index.ts:1:28 - error TS2307: Cannot find module '@components/calculator' or its corresponding type declarations.

1 import { Calculator } from "@components/calculator";
                             ~~~~~~~~~~~~~~~~~~~~~~~~
[<time>rc/index.ts:2:21 - error TS2307: Cannot find module '@utils/math' or its corresponding type declarations.

2 import { add } from "@utils/math";
                      ~~~~~~~~~~~~~
[<time>rc/index.ts:3:24 - error TS2307: Cannot find module '@/config' or its corresponding type declarations.

3 import { config } from "@/config";
                         ~~~~~~~~~~

»  Enabling CJS interop transform...
»  Building ESM...
»  [dryrun] Writing files (4 total)...
     ../dist/index.cjs
     ../dist/index.d.cts
     ../dist/index.d.ts
     ../dist/index.js
»  [dryrun] Updating package.json...
»  Setting "main": "./../dist/index.cjs"
»  Setting "module": "./../dist/index.js"
»  Setting "types": "./../dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./../dist/index.d.cts",
       "import": "./../dist/index.js",
       "require": "./../dist/index.cjs"
     }
   }
»  [dryrun] Skipping package.json modification
»  Compilation finished with 3 error(s) and 0 warning(s)

»  Found 3 error(s) and 0 warning(s)
»  Build completed with errors",
}
`;

exports[`zshy with different tsconfig configurations > should support multiple bin entries 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/multi-bin
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     },
     "bin": {
       "cli-one": "./src/cli-one.ts",
       "cli-two": "./src/cli-two.ts"
     }
   }
»  Reading tsconfig from ./tsconfig.basic.json
»  Determining entrypoints...
   ╔═════════════════╤══════════════════╗
   ║ Subpath         │ Entrypoint       ║
   ╟─────────────────┼──────────────────╢
   ║ "multi-bin-pkg" │ ./src/index.ts   ║
   ║ bin:cli-one     │ ./src/cli-one.ts ║
   ║ bin:cli-two     │ ./src/cli-two.ts ║
   ╚═════════════════╧══════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts",
     "./src/cli-one.ts",
     "./src/cli-two.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "outDir": "<root>/test/multi-bin/dist",
     "rootDir": "<root>/test/multi-bin/src",
     "composite": false,
     "emitDeclarationOnly": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Building ESM...
»  [dryrun] Writing files (24 total)...
     ./dist/cli-one.cjs
     ./dist/cli-one.cjs.map
     ./dist/cli-one.d.cts
     ./dist/cli-one.d.cts.map
     ./dist/cli-one.d.ts
     ./dist/cli-one.d.ts.map
     ./dist/cli-one.js
     ./dist/cli-one.js.map
     ./dist/cli-two.cjs
     ./dist/cli-two.cjs.map
     ./dist/cli-two.d.cts
     ./dist/cli-two.d.cts.map
     ./dist/cli-two.d.ts
     ./dist/cli-two.d.ts.map
     ./dist/cli-two.js
     ./dist/cli-two.js.map
     ./dist/index.cjs
     ./dist/index.cjs.map
     ./dist/index.d.cts
     ./dist/index.d.cts.map
     ./dist/index.d.ts
     ./dist/index.d.ts.map
     ./dist/index.js
     ./dist/index.js.map
»  [dryrun] Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./dist/index.d.cts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   }
»  Setting "bin": {
     "cli-one": "./dist/cli-one.cjs",
     "cli-two": "./dist/cli-two.cjs"
   }
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should support tsconfig paths aliases with at-sign 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/tsconfig-paths
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     }
   }
»  Reading tsconfig from ./tsconfig.json
»  Determining entrypoints...
   ╔═══════════════════════╤════════════════╗
   ║ Subpath               │ Entrypoint     ║
   ╟───────────────────────┼────────────────╢
   ║ "test-tsconfig-paths" │ ./src/index.ts ║
   ╚═══════════════════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts"
   ]
»  Resolved compilerOptions: {
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "outDir": "<root>/test/tsconfig-paths/dist",
     "baseUrl": "<root>/test/tsconfig-paths/src",
     "paths": {
       "@utils/*": [
         "utils/*"
       ],
       "@components/*": [
         "components/*"
       ],
       "@/config": [
         "config.ts"
       ],
       "utils/*": [
         "utils/*"
       ],
       "components/*": [
         "components/*"
       ],
       "lib/*": [
         "lib/*"
       ],
       "~/*": [
         "*"
       ],
       "$config": [
         "config.ts"
       ],
       "#helpers": [
         "utils/helpers.ts"
       ]
     },
     "pathsBasePath": "<root>/test/tsconfig-paths",
     "noEmit": false,
     "emitDeclarationOnly": false,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Building ESM...
»  [dryrun] Writing files (16 total)...
     ./dist/components/calculator.cjs
     ./dist/components/calculator.d.cts
     ./dist/components/calculator.d.ts
     ./dist/components/calculator.js
     ./dist/config.cjs
     ./dist/config.d.cts
     ./dist/config.d.ts
     ./dist/config.js
     ./dist/index.cjs
     ./dist/index.d.cts
     ./dist/index.d.ts
     ./dist/index.js
     ./dist/utils/math.cjs
     ./dist/utils/math.d.cts
     ./dist/utils/math.d.ts
     ./dist/utils/math.js
»  [dryrun] Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./dist/index.d.cts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   }
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should support tsconfig paths aliases without at-sign 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/tsconfig-paths
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts"
     }
   }
»  Reading tsconfig from ./tsconfig.json
»  Determining entrypoints...
   ╔═══════════════════════╤════════════════╗
   ║ Subpath               │ Entrypoint     ║
   ╟───────────────────────┼────────────────╢
   ║ "test-tsconfig-paths" │ ./src/index.ts ║
   ╚═══════════════════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts"
   ]
»  Resolved compilerOptions: {
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "outDir": "<root>/test/tsconfig-paths/dist",
     "baseUrl": "<root>/test/tsconfig-paths/src",
     "paths": {
       "@utils/*": [
         "utils/*"
       ],
       "@components/*": [
         "components/*"
       ],
       "@/config": [
         "config.ts"
       ],
       "utils/*": [
         "utils/*"
       ],
       "components/*": [
         "components/*"
       ],
       "lib/*": [
         "lib/*"
       ],
       "~/*": [
         "*"
       ],
       "$config": [
         "config.ts"
       ],
       "#helpers": [
         "utils/helpers.ts"
       ]
     },
     "pathsBasePath": "<root>/test/tsconfig-paths",
     "noEmit": false,
     "emitDeclarationOnly": false,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Building ESM...
»  [dryrun] Writing files (16 total)...
     ./dist/components/calculator.cjs
     ./dist/components/calculator.d.cts
     ./dist/components/calculator.d.ts
     ./dist/components/calculator.js
     ./dist/config.cjs
     ./dist/config.d.cts
     ./dist/config.d.ts
     ./dist/config.js
     ./dist/index.cjs
     ./dist/index.d.cts
     ./dist/index.d.ts
     ./dist/index.js
     ./dist/utils/math.cjs
     ./dist/utils/math.d.cts
     ./dist/utils/math.d.ts
     ./dist/utils/math.js
»  [dryrun] Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./dist/index.d.cts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   }
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should work with basic.test.tsconfig.json 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/basic
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts",
       "./hello": "./src/hello.ts",
       "./utils": "./src/utils.ts",
       "./plugins": "./src/plugins/index.ts",
       "./plugins/*": "./src/plugins/**/*",
       "./default-function": "./src/default-function.ts",
       "./default-class": "./src/default-class.ts",
       "./default-object": "./src/default-object.ts",
       "./default-arrow": "./src/default-arrow.ts",
       "./default-with-named": "./src/default-with-named.ts",
       "./default-with-export-star": "./src/default-with-export-star.ts",
       "./default-export-equals": "./src/default-export-equals.ts",
       "./default-const": "./src/default-const.ts",
       "./default-literal": "./src/default-literal.ts"
     },
     "bin": "./src/index.ts"
   }
»  Reading tsconfig from ./tsconfig.basic.json
»  Determining entrypoints...
»  Matching glob: ./src/plugins/**/*.{ts,tsx,mts,cts}
   ╔═══════════════════════════════════╤═══════════════════════════════════╗
   ║ Subpath                           │ Entrypoint                        ║
   ╟───────────────────────────────────┼───────────────────────────────────╢
   ║ "my-pkg"                          │ ./src/index.ts                    ║
   ║ "my-pkg/hello"                    │ ./src/hello.ts                    ║
   ║ "my-pkg/utils"                    │ ./src/utils.ts                    ║
   ║ "my-pkg/plugins"                  │ ./src/plugins/index.ts            ║
   ║ "my-pkg/plugins/*"                │ ./src/plugins/**/* (5 matches)    ║
   ║ "my-pkg/default-function"         │ ./src/default-function.ts         ║
   ║ "my-pkg/default-class"            │ ./src/default-class.ts            ║
   ║ "my-pkg/default-object"           │ ./src/default-object.ts           ║
   ║ "my-pkg/default-arrow"            │ ./src/default-arrow.ts            ║
   ║ "my-pkg/default-with-named"       │ ./src/default-with-named.ts       ║
   ║ "my-pkg/default-with-export-star" │ ./src/default-with-export-star.ts ║
   ║ "my-pkg/default-export-equals"    │ ./src/default-export-equals.ts    ║
   ║ "my-pkg/default-const"            │ ./src/default-const.ts            ║
   ║ "my-pkg/default-literal"          │ ./src/default-literal.ts          ║
   ║ bin:my-pkg                        │ ./src/index.ts                    ║
   ╚═══════════════════════════════════╧═══════════════════════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  Cleaning up outDir...
»  Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts",
     "./src/hello.ts",
     "./src/utils.ts",
     "./src/plugins/index.ts",
     "./src/plugins/a.ts",
     "./src/plugins/b.cts",
     "./src/plugins/c.mts",
     "./src/plugins/d/index.ts",
     "./src/default-function.ts",
     "./src/default-class.ts",
     "./src/default-object.ts",
     "./src/default-arrow.ts",
     "./src/default-with-named.ts",
     "./src/default-with-export-star.ts",
     "./src/default-export-equals.ts",
     "./src/default-const.ts",
     "./src/default-literal.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "outDir": "<root>/test/basic/dist",
     "rootDir": "<root>/test/basic/src",
     "composite": false,
     "emitDeclarationOnly": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Found 5 asset import(s), copying to output directory...
»  Copied asset: ./src/assets/README.md → ./dist/assets/README.md
»  Copied asset: ./src/assets/styles.css → ./dist/assets/styles.css
»  Copied asset: ./src/assets/config.json → ./dist/assets/config.json
»  Copied asset: ./src/plugins/plugin-a.css → ./dist/plugins/plugin-a.css
»  Copied asset: ./src/plugins/plugin-b.css → ./dist/plugins/plugin-b.css
»  Building ESM...
»  Found 5 asset import(s), copying to output directory...
»  Writing files (133 total)...
     ./dist/assets/README.md
     ./dist/assets/config.json
     ./dist/assets/styles.css
     ./dist/default-arrow.cjs
     ./dist/default-arrow.cjs.map
     ./dist/default-arrow.d.cts
     ./dist/default-arrow.d.cts.map
     ./dist/default-arrow.d.ts
     ./dist/default-arrow.d.ts.map
     ./dist/default-arrow.js
     ./dist/default-arrow.js.map
     ./dist/default-class.cjs
     ./dist/default-class.cjs.map
     ./dist/default-class.d.cts
     ./dist/default-class.d.cts.map
     ./dist/default-class.d.ts
     ./dist/default-class.d.ts.map
     ./dist/default-class.js
     ./dist/default-class.js.map
     ./dist/default-const.cjs
     ./dist/default-const.cjs.map
     ./dist/default-const.d.cts
     ./dist/default-const.d.cts.map
     ./dist/default-const.d.ts
     ./dist/default-const.d.ts.map
     ./dist/default-const.js
     ./dist/default-const.js.map
     ./dist/default-export-equals.cjs
     ./dist/default-export-equals.cjs.map
     ./dist/default-export-equals.d.cts
     ./dist/default-export-equals.d.cts.map
     ./dist/default-export-equals.d.ts
     ./dist/default-export-equals.d.ts.map
     ./dist/default-export-equals.js
     ./dist/default-export-equals.js.map
     ./dist/default-function.cjs
     ./dist/default-function.cjs.map
     ./dist/default-function.d.cts
     ./dist/default-function.d.cts.map
     ./dist/default-function.d.ts
     ./dist/default-function.d.ts.map
     ./dist/default-function.js
     ./dist/default-function.js.map
     ./dist/default-literal.cjs
     ./dist/default-literal.cjs.map
     ./dist/default-literal.d.cts
     ./dist/default-literal.d.cts.map
     ./dist/default-literal.d.ts
     ./dist/default-literal.d.ts.map
     ./dist/default-literal.js
     ./dist/default-literal.js.map
     ./dist/default-object.cjs
     ./dist/default-object.cjs.map
     ./dist/default-object.d.cts
     ./dist/default-object.d.cts.map
     ./dist/default-object.d.ts
     ./dist/default-object.d.ts.map
     ./dist/default-object.js
     ./dist/default-object.js.map
     ./dist/default-with-export-star.cjs
     ./dist/default-with-export-star.cjs.map
     ./dist/default-with-export-star.d.cts
     ./dist/default-with-export-star.d.cts.map
     ./dist/default-with-export-star.d.ts
     ./dist/default-with-export-star.d.ts.map
     ./dist/default-with-export-star.js
     ./dist/default-with-export-star.js.map
     ./dist/default-with-named.cjs
     ./dist/default-with-named.cjs.map
     ./dist/default-with-named.d.cts
     ./dist/default-with-named.d.cts.map
     ./dist/default-with-named.d.ts
     ./dist/default-with-named.d.ts.map
     ./dist/default-with-named.js
     ./dist/default-with-named.js.map
     ./dist/hello.cjs
     ./dist/hello.cjs.map
     ./dist/hello.d.cts
     ./dist/hello.d.cts.map
     ./dist/hello.d.ts
     ./dist/hello.d.ts.map
     ./dist/hello.js
     ./dist/hello.js.map
     ./dist/index.cjs
     ./dist/index.cjs.map
     ./dist/index.d.cts
     ./dist/index.d.cts.map
     ./dist/index.d.ts
     ./dist/index.d.ts.map
     ./dist/index.js
     ./dist/index.js.map
     ./dist/plugins/a.cjs
     ./dist/plugins/a.cjs.map
     ./dist/plugins/a.d.cts
     ./dist/plugins/a.d.cts.map
     ./dist/plugins/a.d.ts
     ./dist/plugins/a.d.ts.map
     ./dist/plugins/a.js
     ./dist/plugins/a.js.map
     ./dist/plugins/b.cjs
     ./dist/plugins/b.cjs.map
     ./dist/plugins/b.d.cts
     ./dist/plugins/b.d.cts.map
     ./dist/plugins/c.d.mts
     ./dist/plugins/c.d.mts.map
     ./dist/plugins/c.mjs
     ./dist/plugins/c.mjs.map
     ./dist/plugins/d/index.cjs
     ./dist/plugins/d/index.cjs.map
     ./dist/plugins/d/index.d.cts
     ./dist/plugins/d/index.d.cts.map
     ./dist/plugins/d/index.d.ts
     ./dist/plugins/d/index.d.ts.map
     ./dist/plugins/d/index.js
     ./dist/plugins/d/index.js.map
     ./dist/plugins/index.cjs
     ./dist/plugins/index.cjs.map
     ./dist/plugins/index.d.cts
     ./dist/plugins/index.d.cts.map
     ./dist/plugins/index.d.ts
     ./dist/plugins/index.d.ts.map
     ./dist/plugins/index.js
     ./dist/plugins/index.js.map
     ./dist/plugins/plugin-a.css
     ./dist/plugins/plugin-b.css
     ./dist/utils.cjs
     ./dist/utils.cjs.map
     ./dist/utils.d.cts
     ./dist/utils.d.cts.map
     ./dist/utils.d.ts
     ./dist/utils.d.ts.map
     ./dist/utils.js
     ./dist/utils.js.map
»  Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./dist/index.d.cts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
     "./hello": {
       "types": "./dist/hello.d.cts",
       "import": "./dist/hello.js",
       "require": "./dist/hello.cjs"
     },
     "./utils": {
       "types": "./dist/utils.d.cts",
       "import": "./dist/utils.js",
       "require": "./dist/utils.cjs"
     },
     "./plugins": {
       "types": "./dist/plugins/index.d.cts",
       "import": "./dist/plugins/index.js",
       "require": "./dist/plugins/index.cjs"
     },
     "./plugins/*": {
       "types": "./dist/plugins/*",
       "import": "./dist/plugins/*",
       "require": "./dist/plugins/*"
     },
     "./default-function": {
       "types": "./dist/default-function.d.cts",
       "import": "./dist/default-function.js",
       "require": "./dist/default-function.cjs"
     },
     "./default-class": {
       "types": "./dist/default-class.d.cts",
       "import": "./dist/default-class.js",
       "require": "./dist/default-class.cjs"
     },
     "./default-object": {
       "types": "./dist/default-object.d.cts",
       "import": "./dist/default-object.js",
       "require": "./dist/default-object.cjs"
     },
     "./default-arrow": {
       "types": "./dist/default-arrow.d.cts",
       "import": "./dist/default-arrow.js",
       "require": "./dist/default-arrow.cjs"
     },
     "./default-with-named": {
       "types": "./dist/default-with-named.d.cts",
       "import": "./dist/default-with-named.js",
       "require": "./dist/default-with-named.cjs"
     },
     "./default-with-export-star": {
       "types": "./dist/default-with-export-star.d.cts",
       "import": "./dist/default-with-export-star.js",
       "require": "./dist/default-with-export-star.cjs"
     },
     "./default-export-equals": {
       "types": "./dist/default-export-equals.d.cts",
       "import": "./dist/default-export-equals.js",
       "require": "./dist/default-export-equals.cjs"
     },
     "./default-const": {
       "types": "./dist/default-const.d.cts",
       "import": "./dist/default-const.js",
       "require": "./dist/default-const.cjs"
     },
     "./default-literal": {
       "types": "./dist/default-literal.d.cts",
       "import": "./dist/default-literal.js",
       "require": "./dist/default-literal.cjs"
     }
   }
»  Setting "bin": "./dist/index.cjs"
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should work with custom conditions 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/custom-conditions
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts",
       "./utils": "./src/utils.ts"
     },
     "conditions": {
       "custom-esm": "esm",
       "custom-cjs": "cjs",
       "custom-src": "src"
     }
   }
»  Reading tsconfig from ./tsconfig.basic.json
»  Determining entrypoints...
   ╔════════════════════════════════╤════════════════╗
   ║ Subpath                        │ Entrypoint     ║
   ╟────────────────────────────────┼────────────────╢
   ║ "custom-conditions-test"       │ ./src/index.ts ║
   ║ "custom-conditions-test/utils" │ ./src/utils.ts ║
   ╚════════════════════════════════╧════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ ./dist        ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  [dryrun] Cleaning up declarationDir...
»  Resolved entrypoints: [
     "./src/index.ts",
     "./src/utils.ts"
   ]
»  Resolved compilerOptions: {
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "declaration": true,
     "outDir": "<root>/test/custom-conditions/dist",
     "rootDir": "<root>/test/custom-conditions/src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "emitDeclarationOnly": false,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Building ESM...
»  [dryrun] Writing files (8 total)...
     ./dist/index.cjs
     ./dist/index.d.cts
     ./dist/index.d.ts
     ./dist/index.js
     ./dist/utils.cjs
     ./dist/utils.d.cts
     ./dist/utils.d.ts
     ./dist/utils.js
»  [dryrun] Updating package.json...
»  Setting "main": "./dist/index.cjs"
»  Setting "module": "./dist/index.js"
»  Setting "types": "./dist/index.d.cts"
»  Setting "exports": {
     ".": {
       "custom-esm": "./dist/index.js",
       "custom-cjs": "./dist/index.cjs",
       "custom-src": "./src/index.ts",
       "types": "./dist/index.d.cts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
     "./utils": {
       "custom-esm": "./dist/utils.js",
       "custom-cjs": "./dist/utils.cjs",
       "custom-src": "./src/utils.ts",
       "types": "./dist/utils.d.cts",
       "import": "./dist/utils.js",
       "require": "./dist/utils.cjs"
     }
   }
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should work with tsconfig.custom-paths.json 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/basic
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts",
       "./hello": "./src/hello.ts",
       "./utils": "./src/utils.ts",
       "./plugins": "./src/plugins/index.ts",
       "./plugins/*": "./src/plugins/**/*",
       "./default-function": "./src/default-function.ts",
       "./default-class": "./src/default-class.ts",
       "./default-object": "./src/default-object.ts",
       "./default-arrow": "./src/default-arrow.ts",
       "./default-with-named": "./src/default-with-named.ts",
       "./default-with-export-star": "./src/default-with-export-star.ts",
       "./default-export-equals": "./src/default-export-equals.ts",
       "./default-const": "./src/default-const.ts",
       "./default-literal": "./src/default-literal.ts"
     },
     "bin": "./src/index.ts"
   }
»  Reading tsconfig from ./tsconfig.custom-paths.json
»  Determining entrypoints...
»  Matching glob: ./src/plugins/**/*.{ts,tsx,mts,cts}
   ╔═══════════════════════════════════╤═══════════════════════════════════╗
   ║ Subpath                           │ Entrypoint                        ║
   ╟───────────────────────────────────┼───────────────────────────────────╢
   ║ "my-pkg"                          │ ./src/index.ts                    ║
   ║ "my-pkg/hello"                    │ ./src/hello.ts                    ║
   ║ "my-pkg/utils"                    │ ./src/utils.ts                    ║
   ║ "my-pkg/plugins"                  │ ./src/plugins/index.ts            ║
   ║ "my-pkg/plugins/*"                │ ./src/plugins/**/* (5 matches)    ║
   ║ "my-pkg/default-function"         │ ./src/default-function.ts         ║
   ║ "my-pkg/default-class"            │ ./src/default-class.ts            ║
   ║ "my-pkg/default-object"           │ ./src/default-object.ts           ║
   ║ "my-pkg/default-arrow"            │ ./src/default-arrow.ts            ║
   ║ "my-pkg/default-with-named"       │ ./src/default-with-named.ts       ║
   ║ "my-pkg/default-with-export-star" │ ./src/default-with-export-star.ts ║
   ║ "my-pkg/default-export-equals"    │ ./src/default-export-equals.ts    ║
   ║ "my-pkg/default-const"            │ ./src/default-const.ts            ║
   ║ "my-pkg/default-literal"          │ ./src/default-literal.ts          ║
   ║ bin:my-pkg                        │ ./src/index.ts                    ║
   ╚═══════════════════════════════════╧═══════════════════════════════════╝
»  Resolved build paths:
   ╔════════════════╤═══════════════╗
   ║ Location       │ Resolved path ║
   ╟────────────────┼───────────────╢
   ║ rootDir        │ .             ║
   ║ outDir         │ ./build       ║
   ║ declarationDir │ ./types       ║
   ╚════════════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Cleaning up outDir...
»  Resolved entrypoints: [
     "./src/index.ts",
     "./src/hello.ts",
     "./src/utils.ts",
     "./src/plugins/index.ts",
     "./src/plugins/a.ts",
     "./src/plugins/b.cts",
     "./src/plugins/c.mts",
     "./src/plugins/d/index.ts",
     "./src/default-function.ts",
     "./src/default-class.ts",
     "./src/default-object.ts",
     "./src/default-arrow.ts",
     "./src/default-with-named.ts",
     "./src/default-with-export-star.ts",
     "./src/default-export-equals.ts",
     "./src/default-const.ts",
     "./src/default-literal.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node10",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "outDir": "<root>/test/basic/build",
     "rootDir": "<root>/test/basic",
     "declarationDir": "<root>/test/basic/types",
     "emitDeclarationOnly": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Found 5 asset import(s), copying to output directory...
»  [dryrun] Copied asset: ./src/assets/README.md → ./build/src/assets/README.md
»  [dryrun] Copied asset: ./src/assets/styles.css → ./build/src/assets/styles.css
»  [dryrun] Copied asset: ./src/assets/config.json → ./build/src/assets/config.json
»  [dryrun] Copied asset: ./src/plugins/plugin-a.css → ./build/src/plugins/plugin-a.css
»  [dryrun] Copied asset: ./src/plugins/plugin-b.css → ./build/src/plugins/plugin-b.css
»  Building ESM...
»  Found 5 asset import(s), copying to output directory...
»  [dryrun] Writing files (133 total)...
     ./build/src/assets/README.md
     ./build/src/assets/config.json
     ./build/src/assets/styles.css
     ./build/src/default-arrow.cjs
     ./build/src/default-arrow.cjs.map
     ./build/src/default-arrow.js
     ./build/src/default-arrow.js.map
     ./build/src/default-class.cjs
     ./build/src/default-class.cjs.map
     ./build/src/default-class.js
     ./build/src/default-class.js.map
     ./build/src/default-const.cjs
     ./build/src/default-const.cjs.map
     ./build/src/default-const.js
     ./build/src/default-const.js.map
     ./build/src/default-export-equals.cjs
     ./build/src/default-export-equals.cjs.map
     ./build/src/default-export-equals.js
     ./build/src/default-export-equals.js.map
     ./build/src/default-function.cjs
     ./build/src/default-function.cjs.map
     ./build/src/default-function.js
     ./build/src/default-function.js.map
     ./build/src/default-literal.cjs
     ./build/src/default-literal.cjs.map
     ./build/src/default-literal.js
     ./build/src/default-literal.js.map
     ./build/src/default-object.cjs
     ./build/src/default-object.cjs.map
     ./build/src/default-object.js
     ./build/src/default-object.js.map
     ./build/src/default-with-export-star.cjs
     ./build/src/default-with-export-star.cjs.map
     ./build/src/default-with-export-star.js
     ./build/src/default-with-export-star.js.map
     ./build/src/default-with-named.cjs
     ./build/src/default-with-named.cjs.map
     ./build/src/default-with-named.js
     ./build/src/default-with-named.js.map
     ./build/src/hello.cjs
     ./build/src/hello.cjs.map
     ./build/src/hello.js
     ./build/src/hello.js.map
     ./build/src/index.cjs
     ./build/src/index.cjs.map
     ./build/src/index.js
     ./build/src/index.js.map
     ./build/src/plugins/a.cjs
     ./build/src/plugins/a.cjs.map
     ./build/src/plugins/a.js
     ./build/src/plugins/a.js.map
     ./build/src/plugins/b.cjs
     ./build/src/plugins/b.cjs.map
     ./build/src/plugins/c.mjs
     ./build/src/plugins/c.mjs.map
     ./build/src/plugins/d/index.cjs
     ./build/src/plugins/d/index.cjs.map
     ./build/src/plugins/d/index.js
     ./build/src/plugins/d/index.js.map
     ./build/src/plugins/index.cjs
     ./build/src/plugins/index.cjs.map
     ./build/src/plugins/index.js
     ./build/src/plugins/index.js.map
     ./build/src/plugins/plugin-a.css
     ./build/src/plugins/plugin-b.css
     ./build/src/utils.cjs
     ./build/src/utils.cjs.map
     ./build/src/utils.js
     ./build/src/utils.js.map
     ./types/src/default-arrow.d.cts
     ./types/src/default-arrow.d.cts.map
     ./types/src/default-arrow.d.ts
     ./types/src/default-arrow.d.ts.map
     ./types/src/default-class.d.cts
     ./types/src/default-class.d.cts.map
     ./types/src/default-class.d.ts
     ./types/src/default-class.d.ts.map
     ./types/src/default-const.d.cts
     ./types/src/default-const.d.cts.map
     ./types/src/default-const.d.ts
     ./types/src/default-const.d.ts.map
     ./types/src/default-export-equals.d.cts
     ./types/src/default-export-equals.d.cts.map
     ./types/src/default-export-equals.d.ts
     ./types/src/default-export-equals.d.ts.map
     ./types/src/default-function.d.cts
     ./types/src/default-function.d.cts.map
     ./types/src/default-function.d.ts
     ./types/src/default-function.d.ts.map
     ./types/src/default-literal.d.cts
     ./types/src/default-literal.d.cts.map
     ./types/src/default-literal.d.ts
     ./types/src/default-literal.d.ts.map
     ./types/src/default-object.d.cts
     ./types/src/default-object.d.cts.map
     ./types/src/default-object.d.ts
     ./types/src/default-object.d.ts.map
     ./types/src/default-with-export-star.d.cts
     ./types/src/default-with-export-star.d.cts.map
     ./types/src/default-with-export-star.d.ts
     ./types/src/default-with-export-star.d.ts.map
     ./types/src/default-with-named.d.cts
     ./types/src/default-with-named.d.cts.map
     ./types/src/default-with-named.d.ts
     ./types/src/default-with-named.d.ts.map
     ./types/src/hello.d.cts
     ./types/src/hello.d.cts.map
     ./types/src/hello.d.ts
     ./types/src/hello.d.ts.map
     ./types/src/index.d.cts
     ./types/src/index.d.cts.map
     ./types/src/index.d.ts
     ./types/src/index.d.ts.map
     ./types/src/plugins/a.d.cts
     ./types/src/plugins/a.d.cts.map
     ./types/src/plugins/a.d.ts
     ./types/src/plugins/a.d.ts.map
     ./types/src/plugins/b.d.cts
     ./types/src/plugins/b.d.cts.map
     ./types/src/plugins/c.d.mts
     ./types/src/plugins/c.d.mts.map
     ./types/src/plugins/d/index.d.cts
     ./types/src/plugins/d/index.d.cts.map
     ./types/src/plugins/d/index.d.ts
     ./types/src/plugins/d/index.d.ts.map
     ./types/src/plugins/index.d.cts
     ./types/src/plugins/index.d.cts.map
     ./types/src/plugins/index.d.ts
     ./types/src/plugins/index.d.ts.map
     ./types/src/utils.d.cts
     ./types/src/utils.d.cts.map
     ./types/src/utils.d.ts
     ./types/src/utils.d.ts.map
»  [dryrun] Updating package.json...
»  Setting "main": "./build/src/index.cjs"
»  Setting "module": "./build/src/index.js"
»  Setting "types": "./types/src/index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./types/src/index.d.cts",
       "import": "./build/src/index.js",
       "require": "./build/src/index.cjs"
     },
     "./hello": {
       "types": "./types/src/hello.d.cts",
       "import": "./build/src/hello.js",
       "require": "./build/src/hello.cjs"
     },
     "./utils": {
       "types": "./types/src/utils.d.cts",
       "import": "./build/src/utils.js",
       "require": "./build/src/utils.cjs"
     },
     "./plugins": {
       "types": "./types/src/plugins/index.d.cts",
       "import": "./build/src/plugins/index.js",
       "require": "./build/src/plugins/index.cjs"
     },
     "./plugins/*": {
       "types": "./types/src/plugins/*",
       "import": "./build/src/plugins/*",
       "require": "./build/src/plugins/*"
     },
     "./default-function": {
       "types": "./types/src/default-function.d.cts",
       "import": "./build/src/default-function.js",
       "require": "./build/src/default-function.cjs"
     },
     "./default-class": {
       "types": "./types/src/default-class.d.cts",
       "import": "./build/src/default-class.js",
       "require": "./build/src/default-class.cjs"
     },
     "./default-object": {
       "types": "./types/src/default-object.d.cts",
       "import": "./build/src/default-object.js",
       "require": "./build/src/default-object.cjs"
     },
     "./default-arrow": {
       "types": "./types/src/default-arrow.d.cts",
       "import": "./build/src/default-arrow.js",
       "require": "./build/src/default-arrow.cjs"
     },
     "./default-with-named": {
       "types": "./types/src/default-with-named.d.cts",
       "import": "./build/src/default-with-named.js",
       "require": "./build/src/default-with-named.cjs"
     },
     "./default-with-export-star": {
       "types": "./types/src/default-with-export-star.d.cts",
       "import": "./build/src/default-with-export-star.js",
       "require": "./build/src/default-with-export-star.cjs"
     },
     "./default-export-equals": {
       "types": "./types/src/default-export-equals.d.cts",
       "import": "./build/src/default-export-equals.js",
       "require": "./build/src/default-export-equals.cjs"
     },
     "./default-const": {
       "types": "./types/src/default-const.d.cts",
       "import": "./build/src/default-const.js",
       "require": "./build/src/default-const.cjs"
     },
     "./default-literal": {
       "types": "./types/src/default-literal.d.cts",
       "import": "./build/src/default-literal.js",
       "require": "./build/src/default-literal.cjs"
     }
   }
»  Setting "bin": "./build/src/index.cjs"
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;

exports[`zshy with different tsconfig configurations > should work with tsconfig.flat.json 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "╔═══════════════════════════════════════════════╗
   ║ zshy » the bundler-free TypeScript build tool ║
   ╚═══════════════════════════════════════════════╝
»  Starting build...
»  Verbose mode enabled
»  Detected package manager: <pm>
»  Dry run mode enabled. No files will be written or modified.
»  Build will fail only on errors (default)
»  Detected project root: <root>/test/basic
»  Reading package.json from ./package.json
»  Parsed zshy config: {
     "exports": {
       ".": "./src/index.ts",
       "./hello": "./src/hello.ts",
       "./utils": "./src/utils.ts",
       "./plugins": "./src/plugins/index.ts",
       "./plugins/*": "./src/plugins/**/*",
       "./default-function": "./src/default-function.ts",
       "./default-class": "./src/default-class.ts",
       "./default-object": "./src/default-object.ts",
       "./default-arrow": "./src/default-arrow.ts",
       "./default-with-named": "./src/default-with-named.ts",
       "./default-with-export-star": "./src/default-with-export-star.ts",
       "./default-export-equals": "./src/default-export-equals.ts",
       "./default-const": "./src/default-const.ts",
       "./default-literal": "./src/default-literal.ts"
     },
     "bin": "./src/index.ts"
   }
»  Reading tsconfig from ./tsconfig.flat.json
»  You're building your code to the project root. This means your compiled files will be generated alongside your source files.
   Ensure that your "files" in package.json excludes TypeScript source files, or your users may experience .d.ts resolution issues in some environments:
     "files": ["**/*.js", "**/*.mjs", "**/*.cjs", "**/*.d.ts", "**/*.d.mts", "**/*.d.cts"]
»  Determining entrypoints...
»  Matching glob: ./src/plugins/**/*.{ts,tsx,mts,cts}
   ╔═══════════════════════════════════╤═══════════════════════════════════╗
   ║ Subpath                           │ Entrypoint                        ║
   ╟───────────────────────────────────┼───────────────────────────────────╢
   ║ "my-pkg"                          │ ./src/index.ts                    ║
   ║ "my-pkg/hello"                    │ ./src/hello.ts                    ║
   ║ "my-pkg/utils"                    │ ./src/utils.ts                    ║
   ║ "my-pkg/plugins"                  │ ./src/plugins/index.ts            ║
   ║ "my-pkg/plugins/*"                │ ./src/plugins/**/* (5 matches)    ║
   ║ "my-pkg/default-function"         │ ./src/default-function.ts         ║
   ║ "my-pkg/default-class"            │ ./src/default-class.ts            ║
   ║ "my-pkg/default-object"           │ ./src/default-object.ts           ║
   ║ "my-pkg/default-arrow"            │ ./src/default-arrow.ts            ║
   ║ "my-pkg/default-with-named"       │ ./src/default-with-named.ts       ║
   ║ "my-pkg/default-with-export-star" │ ./src/default-with-export-star.ts ║
   ║ "my-pkg/default-export-equals"    │ ./src/default-export-equals.ts    ║
   ║ "my-pkg/default-const"            │ ./src/default-const.ts            ║
   ║ "my-pkg/default-literal"          │ ./src/default-literal.ts          ║
   ║ bin:my-pkg                        │ ./src/index.ts                    ║
   ╚═══════════════════════════════════╧═══════════════════════════════════╝
»  Resolved build paths:
   ╔══════════╤═══════════════╗
   ║ Location │ Resolved path ║
   ╟──────────┼───────────────╢
   ║ rootDir  │ ./src         ║
   ║ outDir   │ .             ║
   ╚══════════╧═══════════════╝
»  Package is an ES module (package.json#/type is "module")
»  [dryrun] Skipping cleanup of outDir as it contains source files
»  [dryrun] Skipping cleanup of declarationDir as it contains source files
»  Resolved entrypoints: [
     "./src/index.ts",
     "./src/hello.ts",
     "./src/utils.ts",
     "./src/plugins/index.ts",
     "./src/plugins/a.ts",
     "./src/plugins/b.cts",
     "./src/plugins/c.mts",
     "./src/plugins/d/index.ts",
     "./src/default-function.ts",
     "./src/default-class.ts",
     "./src/default-object.ts",
     "./src/default-arrow.ts",
     "./src/default-with-named.ts",
     "./src/default-with-export-star.ts",
     "./src/default-export-equals.ts",
     "./src/default-const.ts",
     "./src/default-literal.ts"
   ]
»  Resolved compilerOptions: {
     "lib": [
       "lib.esnext.d.ts"
     ],
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "moduleDetection": 2,
     "allowJs": true,
     "declaration": true,
     "jsx": 4,
     "allowImportingTsExtensions": true,
     "rewriteRelativeImportExtensions": true,
     "verbatimModuleSyntax": false,
     "noEmit": false,
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "sourceMap": true,
     "declarationMap": true,
     "resolveJsonModule": true,
     "noImplicitOverride": true,
     "noImplicitThis": true,
     "rootDir": "<root>/test/basic/src",
     "outDir": "<root>/test/basic",
     "emitDeclarationOnly": false,
     "composite": false
   }
»  Building CJS... (rewriting .ts -> .cjs/.d.cts)
»  Enabling CJS interop transform...
»  Found 5 asset import(s), copying to output directory...
»  [dryrun] Copied asset: ./src/assets/README.md → ./assets/README.md
»  [dryrun] Copied asset: ./src/assets/styles.css → ./assets/styles.css
»  [dryrun] Copied asset: ./src/assets/config.json → ./assets/config.json
»  [dryrun] Copied asset: ./src/plugins/plugin-a.css → ./plugins/plugin-a.css
»  [dryrun] Copied asset: ./src/plugins/plugin-b.css → ./plugins/plugin-b.css
»  Building ESM...
»  Found 5 asset import(s), copying to output directory...
»  [dryrun] Writing files (133 total)...
     ./assets/README.md
     ./assets/config.json
     ./assets/styles.css
     ./default-arrow.cjs
     ./default-arrow.cjs.map
     ./default-arrow.d.cts
     ./default-arrow.d.cts.map
     ./default-arrow.d.ts
     ./default-arrow.d.ts.map
     ./default-arrow.js
     ./default-arrow.js.map
     ./default-class.cjs
     ./default-class.cjs.map
     ./default-class.d.cts
     ./default-class.d.cts.map
     ./default-class.d.ts
     ./default-class.d.ts.map
     ./default-class.js
     ./default-class.js.map
     ./default-const.cjs
     ./default-const.cjs.map
     ./default-const.d.cts
     ./default-const.d.cts.map
     ./default-const.d.ts
     ./default-const.d.ts.map
     ./default-const.js
     ./default-const.js.map
     ./default-export-equals.cjs
     ./default-export-equals.cjs.map
     ./default-export-equals.d.cts
     ./default-export-equals.d.cts.map
     ./default-export-equals.d.ts
     ./default-export-equals.d.ts.map
     ./default-export-equals.js
     ./default-export-equals.js.map
     ./default-function.cjs
     ./default-function.cjs.map
     ./default-function.d.cts
     ./default-function.d.cts.map
     ./default-function.d.ts
     ./default-function.d.ts.map
     ./default-function.js
     ./default-function.js.map
     ./default-literal.cjs
     ./default-literal.cjs.map
     ./default-literal.d.cts
     ./default-literal.d.cts.map
     ./default-literal.d.ts
     ./default-literal.d.ts.map
     ./default-literal.js
     ./default-literal.js.map
     ./default-object.cjs
     ./default-object.cjs.map
     ./default-object.d.cts
     ./default-object.d.cts.map
     ./default-object.d.ts
     ./default-object.d.ts.map
     ./default-object.js
     ./default-object.js.map
     ./default-with-export-star.cjs
     ./default-with-export-star.cjs.map
     ./default-with-export-star.d.cts
     ./default-with-export-star.d.cts.map
     ./default-with-export-star.d.ts
     ./default-with-export-star.d.ts.map
     ./default-with-export-star.js
     ./default-with-export-star.js.map
     ./default-with-named.cjs
     ./default-with-named.cjs.map
     ./default-with-named.d.cts
     ./default-with-named.d.cts.map
     ./default-with-named.d.ts
     ./default-with-named.d.ts.map
     ./default-with-named.js
     ./default-with-named.js.map
     ./hello.cjs
     ./hello.cjs.map
     ./hello.d.cts
     ./hello.d.cts.map
     ./hello.d.ts
     ./hello.d.ts.map
     ./hello.js
     ./hello.js.map
     ./index.cjs
     ./index.cjs.map
     ./index.d.cts
     ./index.d.cts.map
     ./index.d.ts
     ./index.d.ts.map
     ./index.js
     ./index.js.map
     ./plugins/a.cjs
     ./plugins/a.cjs.map
     ./plugins/a.d.cts
     ./plugins/a.d.cts.map
     ./plugins/a.d.ts
     ./plugins/a.d.ts.map
     ./plugins/a.js
     ./plugins/a.js.map
     ./plugins/b.cjs
     ./plugins/b.cjs.map
     ./plugins/b.d.cts
     ./plugins/b.d.cts.map
     ./plugins/c.d.mts
     ./plugins/c.d.mts.map
     ./plugins/c.mjs
     ./plugins/c.mjs.map
     ./plugins/d/index.cjs
     ./plugins/d/index.cjs.map
     ./plugins/d/index.d.cts
     ./plugins/d/index.d.cts.map
     ./plugins/d/index.d.ts
     ./plugins/d/index.d.ts.map
     ./plugins/d/index.js
     ./plugins/d/index.js.map
     ./plugins/index.cjs
     ./plugins/index.cjs.map
     ./plugins/index.d.cts
     ./plugins/index.d.cts.map
     ./plugins/index.d.ts
     ./plugins/index.d.ts.map
     ./plugins/index.js
     ./plugins/index.js.map
     ./plugins/plugin-a.css
     ./plugins/plugin-b.css
     ./utils.cjs
     ./utils.cjs.map
     ./utils.d.cts
     ./utils.d.cts.map
     ./utils.d.ts
     ./utils.d.ts.map
     ./utils.js
     ./utils.js.map
»  [dryrun] Updating package.json...
»  Setting "main": "./index.cjs"
»  Setting "module": "./index.js"
»  Setting "types": "./index.d.cts"
»  Setting "exports": {
     ".": {
       "types": "./index.d.cts",
       "import": "./index.js",
       "require": "./index.cjs"
     },
     "./hello": {
       "types": "./hello.d.cts",
       "import": "./hello.js",
       "require": "./hello.cjs"
     },
     "./utils": {
       "types": "./utils.d.cts",
       "import": "./utils.js",
       "require": "./utils.cjs"
     },
     "./plugins": {
       "types": "./plugins/index.d.cts",
       "import": "./plugins/index.js",
       "require": "./plugins/index.cjs"
     },
     "./plugins/*": {
       "types": "./plugins/*",
       "import": "./plugins/*",
       "require": "./plugins/*"
     },
     "./default-function": {
       "types": "./default-function.d.cts",
       "import": "./default-function.js",
       "require": "./default-function.cjs"
     },
     "./default-class": {
       "types": "./default-class.d.cts",
       "import": "./default-class.js",
       "require": "./default-class.cjs"
     },
     "./default-object": {
       "types": "./default-object.d.cts",
       "import": "./default-object.js",
       "require": "./default-object.cjs"
     },
     "./default-arrow": {
       "types": "./default-arrow.d.cts",
       "import": "./default-arrow.js",
       "require": "./default-arrow.cjs"
     },
     "./default-with-named": {
       "types": "./default-with-named.d.cts",
       "import": "./default-with-named.js",
       "require": "./default-with-named.cjs"
     },
     "./default-with-export-star": {
       "types": "./default-with-export-star.d.cts",
       "import": "./default-with-export-star.js",
       "require": "./default-with-export-star.cjs"
     },
     "./default-export-equals": {
       "types": "./default-export-equals.d.cts",
       "import": "./default-export-equals.js",
       "require": "./default-export-equals.cjs"
     },
     "./default-const": {
       "types": "./default-const.d.cts",
       "import": "./default-const.js",
       "require": "./default-const.cjs"
     },
     "./default-literal": {
       "types": "./default-literal.d.cts",
       "import": "./default-literal.js",
       "require": "./default-literal.cjs"
     }
   }
»  Setting "bin": "./index.cjs"
»  [dryrun] Skipping package.json modification
»  Build complete!",
}
`;
